# Paragliding_Flight_Analyses

./: .gitignore  2024-05-19 10_05_00.igc  2024-08-03 09_11_21.igc  Flight_Analyse.ipynb  Flight_Analyses copy.ipynb  Flight_Analyses.ipynb  IGC_file_parse.py  OLCdistance.py  ParseIGCfile.ipynb  ParseIGCfiles.py  README.md  analiz.py  basic.py  beginner.ipynb  climb_rate_model.h5  deep_learn.ipynb  deeplearning.ipynb  expand_flight_log.py  flight_data.csv  flightdataprepare.ipynb  getweatherdata.py  main.py  map.html  new.ipynb  prepare_flightdata.ipynb  prepare_flightdata.py  prepare_flightlog.py  process_flightdata.ipynb  pyproject.toml  regression.ipynb  requirments.txt  setup.py  weatherapi.ipynb
Yedek/: Basic Flight_Analyses.ipynb  Deep Learn.ipynb  ParseIGCfile.ipynb
app/: IGC_file_parse.py  __init__.py  basic_flight_analyses.py  db_connection.py  flight_analyse_scoring.ipynb  machinelearning.ipynb  multiple_model_traninng.ipynb  prepare_flightlog.py  process_flightdata.ipynb  routes.py  transformermodel.ipynb  weather_data.py
data/: 2013-10-26-XGD-001-01.igc  2018-07-16 09_13_56.igc  flight_data.csv  flight_data_processed.csv  weather_data.csv  zone_model.h5
dev/: create_map.py  deep_learn.ipynb  deeplearning.ipynb  machinelearning.ipynb  prepare_flightlog.py  process_flightdata.ipynb  timeshiftmodel.ipynb  weather_data.py
flightdata/: weather_data.csv
flightlogs/: 2013-10-26-XGD-001-01.igc  2018-07-16 09_13_56.igc  2020-07-19-XCT-XXX-01.igc  2020-07-26 (1).igc  2020-07-26-073105_basat.igc  2021-07-22-XCT-HUS-01.igc  2021-07-26-XFH-000-01.IGC  (+2 more)
(+36 files in other folders)
