[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-package-name"
version = "0.1.0"
description = "A short description of your package"
authors = [{ name="Your Name", email="you@example.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy",  # Example dependency
]
requires-python = ">=3.8"
